BuildHughes/translation-tool/inputs/source_meta/objects/HNS_Adapter_Model_Mapping__c.object
<CustomObject>
    <description>Adapter Model to Product Mapping</description>
    <fields>
        <fullName>HNS_Adapter_Model_MAP_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>HNS Adapter Model MAP ID</description>
        <externalId>true</externalId>
        <label>HNS Adapter Model MAP ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>New_Adapter_Model__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>New Adapter Model</description>
        <label>New Adapter Model</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>HNS_Products__c.Product_Type__c</field>
                <operation>equals</operation>
                <value>Device</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>HNS_Products__c</referenceTo>
        <relationshipLabel>HNS Adapter Model Mappings</relationshipLabel>
        <relationshipName>HNS_Adapter_Model_Mappings</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Old_Adapter_Model__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Old Adapter Model</description>
        <inlineHelpText>Old Adapter Model</inlineHelpText>
        <label>Old Adapter Model</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>HNS Adapter Model Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>New_Adapter_Model__c</columns>
        <columns>Old_Adapter_Model__c</columns>
        <columns>HNS_Adapter_Model_MAP_ID__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ADAPMAP - {000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HNS Adapter Model Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>